--- a/scss/mediaQueries.scss
+++ b/scss/mediaQueries.scss
@@ -1,28 +1,28 @@
 //* Mobile-first
-@media (min-width: em(1400px)) {
+@media (min-width: rem(1400px)) {
 }
-@media (min-width: em(1200px)) {
+@media (min-width: rem(1200px)) {
 }
-@media (min-width: em(992px)) {
+@media (min-width: rem(992px)) {
 	.login-list {
 		flex-direction: column;
 		min-width: 100px;
 		min-height: 150px;
 	}
 }
-@media (min-width: em(768px)) {
+@media (min-width: rem(768px)) {
 	.block-features__img {
-		margin-right: em(10px);
+		margin-right: rem(10px);
 	}
 }
-@media (min-width: em(576px)) {
+@media (min-width: rem(576px)) {
 }
 //* Desktop-first
-@media (max-width: em(1399px)) {
+@media (max-width: rem(1399px)) {
 }
-@media (max-width: em(1199px)) {
+@media (max-width: rem(1199px)) {
 }
-@media (max-width: em(991px)) {
+@media (max-width: rem(991px)) {
 	.menu {
 		margin-right: 0;
 	}
@@ -75,7 +75,7 @@
 	}
 	.header {
 		&__menu {
-			margin-bottom: em(20px);
+			margin-bottom: rem(20px);
 		}
 		&-btn__demo {
 			background-color: var(--main-color);
@@ -87,7 +87,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			padding: em(100px) em(30px) em(30px) em(30px);
+			padding: rem(100px) rem(30px) rem(30px) rem(30px);
 			flex-direction: column;
 			align-items: center;
 			background-color: var(--light-color);
@@ -123,28 +123,28 @@
 			}
 		}
 		&__link {
-			font-size: em(24px);
+			font-size: rem(24px);
 		}
 	}
 	.login {
 		position: static;
 		&-list {
 			@include adaptiv-value("width", 768, 300, 1);
-			height: em(75px);
+			height: rem(75px);
 			flex-direction: row;
 			flex-wrap: wrap;
-			margin-top: em(15px);
+			margin-top: rem(15px);
 			top: 100%;
 			right: 50%;
-			gap: em(20px);
+			gap: rem(20px);
 			li {
-				padding: em(15px);
-				font-size: em(18px);
+				padding: rem(15px);
+				font-size: rem(18px);
 			}
 		}
 	}
 }
-@media (max-width: em(767px)) {
+@media (max-width: rem(767px)) {
 	.hero {
 		background-position: 40%, 50%;
 	}
@@ -157,7 +157,7 @@
 		flex: 1 1 auto;
 	}
 }
-@media (max-width: em(575px)) {
+@media (max-width: rem(575px)) {
 	.hero {
 		background: linear-gradient(
 					135deg,
