--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -7,7 +7,7 @@ html {
 			transition: all 1s ease 0s;
 			border-radius: 50%;
 			&::before {
-				font-size: em(24px, 14px);
+				font-size: rem(24px);
 			}
 			&:hover {
 				filter: $dropShadow;
@@ -29,7 +29,7 @@ html {
 	&.light {
 		.page__theme {
 			&.icon-moon {
-				margin-top: em(5px);
+				margin-top: rem(5px);
 				transform: rotate(325deg) scale(1);
 				color: var(--main-color);
 				&::before {
