--- a/scss/global.scss
+++ b/scss/global.scss
@@ -4,7 +4,8 @@
 
 body {
 	transition: color 0.3s ease 0s;
-	font-family: "Raleway", "Roboto", sans-serif;
+	font-family: "Roboto", sans-serif;
+	font-family: "Raleway", sans-serif;
 	background-color: var(--base-color);
 	color: var(--main-color);
 	&._lock {
