--- a/scss/header.scss
+++ b/scss/header.scss
@@ -45,6 +45,9 @@
 		z-index: 2;
 	}
 }
+html.dark .header {
+	box-shadow: 0px 0px 21px 0px rgba(255, 255, 255, 0.15);
+}
 .logo {
 	width: 100%;
 	height: 100%;
@@ -84,13 +87,6 @@
 			@extend %underline;
 		}
 		z-index: 2;
-		@media (min-width: rem(992px)) {
-			display: flex;
-			align-items: center;
-			> li {
-				padding: rem(10px) 0;
-			}
-		}
 	}
 
 	&__link {
@@ -183,7 +179,7 @@ body._pc .login:hover {
 
 	.login-list {
 		@extend %visible;
-		@media (max-width: rem(991px)) {
+		@media (max-width: em(991px)) {
 			transform: translate(50%, 0);
 		}
 	}
