--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,6 @@
   content: "\e909";
 }
 
-html {
-  --orange-color: #f0a446;
-  --gray-color: #757575;
-}
-
 html .wrapper {
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
@@ -84,17 +79,21 @@ html .wrapper {
 html.light {
   --main-color: #214e41;
   --icon-color: var(--main-color);
-  --base-color: #ffffff;
+  --base-color: #fafafa;
   --accent-color: #43806c;
   --light-color: #e3eeed;
+  --gray-color: #757575;
+  --orange-color: #f0a446;
 }
 
 html.dark {
-  --main-color: rgb(114, 194, 181);
+  --main-color: #7cdfc3;
   --icon-color: var(--main-color);
-  --base-color: rgba(43, 43, 43, 1);
-  --accent-color: rgb(131, 231, 193);
-  --light-color: rgba(73, 77, 77, 1);
+  --base-color: #2e2d2e;
+  --accent-color: #36cb9a;
+  --light-color: #2d312f;
+  --gray-color: #aebfb9;
+  --orange-color: #ffb356;
 }
 
 /*Reset Styles*/
@@ -247,7 +246,7 @@ html .page__theme.icon-sun {
 
 html .page__theme.icon-moon::before,
 html .page__theme.icon-sun::before {
-  font-size: 1.7142857143em;
+  font-size: 1.7142857143rem;
 }
 
 html .page__theme.icon-moon:hover,
@@ -272,7 +271,7 @@ html.dark .logo__light {
 }
 
 html.light .page__theme.icon-moon {
-  margin-top: 0.3571428571em;
+  margin-top: 0.3571428571rem;
   -webkit-transform: rotate(325deg) scale(1);
       -ms-transform: rotate(325deg) scale(1);
           transform: rotate(325deg) scale(1);
@@ -317,11 +316,16 @@ html.light .logo__dark {
   background-color: #666;
 }
 
+:root {
+  font-size: 14px;
+}
+
 body {
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
   transition: color 0.3s ease 0s;
-  font-family: "Raleway", "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   background-color: var(--base-color);
   color: var(--main-color);
 }
@@ -424,7 +428,7 @@ main {
 }
 
 .btn__green {
-  padding: 0.7142857143em 1em;
+  padding: 0.7142857143rem 1rem;
   background-color: var(--accent-color);
   border-radius: 6px;
   color: var(--base-color);
@@ -445,7 +449,7 @@ main {
 .title {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 2.5714285714em;
+  font-size: 2.5714285714rem;
   line-height: 1.28em;
 }
 
@@ -459,7 +463,7 @@ main {
   display: flex;
   width: 100%;
   height: calc(60px + 30 * ((100vw - 320px) / 1120));
-  padding: 1.7857142857em 0;
+  padding: 1.7857142857rem 0;
   background-color: var(--base-color);
   color: var(--main-color);
 }
@@ -531,6 +535,11 @@ main {
   z-index: 2;
 }
 
+html.dark .header {
+  -webkit-box-shadow: 0px 0px 21px 0px rgba(255, 255, 255, 0.15);
+          box-shadow: 0px 0px 21px 0px rgba(255, 255, 255, 0.15);
+}
+
 .logo {
   width: 100%;
   height: 100%;
@@ -541,7 +550,7 @@ main {
 }
 
 .logo-link.icon-logo {
-  font-size: 5.3571428571em;
+  font-size: 5.3571428571rem;
 }
 
 .logo__dark {
@@ -603,7 +612,7 @@ main {
   bottom: 0;
   left: 0;
   background-color: var(--accent-color);
-  height: 0.1071428571em;
+  height: 0.1071428571rem;
   -webkit-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
@@ -653,8 +662,8 @@ main {
   -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
-  margin-left: 0.7142857143em;
-  margin-top: -0.3571428571em;
+  margin-left: 0.7142857143rem;
+  margin-top: -0.3571428571rem;
 }
 
 .login-list {
@@ -691,7 +700,7 @@ main {
 }
 
 .login-list > li a::before {
-  margin-right: 1.0714285714em;
+  margin-right: 1.0714285714rem;
 }
 
 .login-list a {
@@ -703,7 +712,7 @@ body._pc .login:hover::after {
   -webkit-transform: rotate(-135deg);
       -ms-transform: rotate(-135deg);
           transform: rotate(-135deg);
-  margin-top: 0.3571428571em;
+  margin-top: 0.3571428571rem;
 }
 
 .no-webp .hero {
@@ -728,9 +737,9 @@ html.no-webp.dark .hero {
   background: linear-gradient(90deg, rgb(0, 0, 0) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0.3) 80%), url(../img/hero-bg.jpg) 50% 50%/cover no-repeat; }
 
 .offer__title {
-  -webkit-transition: color 0.1s ease 0;
-  -o-transition: color 0.1s ease 0;
-  transition: color 0.1s ease 0;
+  -webkit-transition: color 0.1s ease 0s;
+  -o-transition: color 0.1s ease 0s;
+  transition: color 0.1s ease 0s;
   max-width: calc(300px + 220 * ((100vw - 320px) / 1120));
   margin-bottom: calc(24px + 16 * ((100vw - 320px) / 1120));
 }
@@ -746,7 +755,7 @@ html.no-webp.dark .hero {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 28.7857142857em;
+  max-width: 28.7857142857rem;
   border-radius: 6px;
   overflow: hidden;
   background: var(--base-color);
@@ -756,7 +765,7 @@ html.no-webp.dark .hero {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  padding: 1.4285714286em;
+  padding: 1.4285714286rem;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.43em;
@@ -786,6 +795,8 @@ html.no-webp.dark .hero {
 .offer__submit {
   padding-top: calc(15px + 5 * ((100vw - 320px) / 1120));
   padding-bottom: calc(15px + 5 * ((100vw - 320px) / 1120));
+  padding-left: calc(25px + 10 * ((100vw - 320px) / 1120));
+  padding-right: calc(25px + 10 * ((100vw - 320px) / 1120));
   border-radius: 0;
 }
 
@@ -811,7 +822,7 @@ html.no-webp.dark .hero {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  row-gap: 3.2142857143em;
+  row-gap: 3.2142857143rem;
   background-color: var(--base-color);
   overflow: hidden;
   border-radius: 6px;
@@ -837,8 +848,8 @@ html.dark .features {
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 25.4285714286em;
-          flex: 1 1 25.4285714286em;
+      -ms-flex: 1 1 25.4285714286rem;
+          flex: 1 1 25.4285714286rem;
 }
 
 .block-features__img {
@@ -848,33 +859,35 @@ html.dark .features {
 .block-features__img img {
   -o-object-fit: cover;
      object-fit: cover;
-  height: 3.2142857143em;
-  width: 4.1428571429em;
+  height: 3.2142857143rem;
+  width: 4.1428571429rem;
 }
 
 .block-features__content > :not(:last-child) {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.5rem;
 }
 
 .block-features__title {
-  font-size: 16px;
+  font-size: 1.1428571429rem;
   line-height: 1.5em;
 }
 
 .block-features__desc {
   font-size: 14px;
-  line-height: 1.4em;
+  line-height: 1.4285714286em;
 }
 
 .why {
-  padding: 7.1428571429em 0 8.5714285714em 0;
-  font-size: 1.2857142857em;
-  letter-spacing: 0.0011111111em;
+  padding: 7.1428571429rem 0 8.5714285714rem 0;
+  font-size: 1.2857142857rem;
+  letter-spacing: 0.0014285714rem;
 }
 
 .why__container {
   max-width: calc(1200px);
-  padding: 0 3.3333333333em;
+  padding: 0 4.2857142857rem;
+  padding-right: 60px;
+  padding-left: 60px;
 }
 
 .why__body {
@@ -892,25 +905,26 @@ html.dark .features {
 }
 
 .why__subtitle {
-  font-size: 0.9285714286em;
+  font-size: 0.9285714286rem;
   line-height: 1.54em;
-  letter-spacing: 0.0038461538em;
+  letter-spacing: 0.0035714286rem;
   text-transform: uppercase;
-  margin-bottom: 1.4285714286em;
+  margin-bottom: 1.4285714286rem;
   color: var(--accent-color);
 }
 
 .why__title {
-  font-size: 2em;
-  max-width: 13.3333333333em;
-  margin-bottom: 2.4285714286em;
+  font-size: 2.5714285714rem;
+  max-width: 34.2857142857rem;
+  margin-bottom: 2.4285714286rem;
   letter-spacing: normal;
 }
 
 .why__text {
-  margin-bottom: 1.8571428571em;
+  margin-bottom: 1.8571428571rem;
   line-height: 1.67em;
   color: var(--gray-color);
+  max-width: 47.8571428571rem;
 }
 
 .why__more {
@@ -919,22 +933,147 @@ html.dark .features {
   display: -ms-flexbox;
   display: flex;
   text-align: center;
-  max-width: 6em;
+  max-width: 7.7142857143rem;
   font-weight: 700;
   line-height: 1em;
 }
 
-.why__statistic img {
+.why__stats img {
   max-width: 100%;
 }
 
-@media (min-width: 54.8571428571em) {
+.stats__body {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  gap: 3.9%;
+  overflow: hidden;
+  max-width: 47.8571428571rem;
+}
+
+.stats-pointer,
+.stats-pointer__column {
+  position: relative;
+  width: 1000%;
+  height: 2px;
+  background-color: var(--orange-color);
+  margin-top: 0.7142857143rem;
+  margin-bottom: 1.2857142857rem;
+  z-index: 1;
+}
+
+.stats-pointer__column {
+  display: none;
+  width: 100%;
+  padding: 0;
+  height: 2px;
+  bottom: 130px;
+  position: absolute;
+}
+
+.stats__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  margin-bottom: 45px;
+}
+
+.stats__number {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 5rem;
+  line-height: 1.2857142857em;
+}
+
+.stats__text {
+  max-width: 16.0714285714rem;
+  font-weight: 700;
+  font-size: 0.9285714286rem;
+  line-height: 1.6923076923em;
+  letter-spacing: 0.0015384615em;
+}
+
+.stats__text span {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.stats__columns {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 46.07%;
+          flex: 1 1 46.07%;
+}
+
+.stats__desc {
+  margin-top: 0.7142857143rem;
+  text-align: right;
+  font-size: 0.9285714286rem;
+  line-height: 1.6923076923em;
+  color: var(--gray-color);
+}
+
+.column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  position: relative;
+}
+
+.column__item {
+  position: relative;
+  padding: 1.5714285714rem 1.4285714286rem 3rem 1.4285714286rem;
+}
+
+.column__absolute {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  min-width: -webkit-max-content;
+  min-width: -moz-max-content;
+  min-width: max-content;
+}
+
+.column__price {
+  top: 0;
+}
+
+.column__value > div {
+  background-color: var(--accent-color);
+  width: 5.5714285714rem;
+}
+
+.column__desc {
+  bottom: 0;
+}
+
+.deductible__value > div {
+  height: 10.7142857143rem;
+}
+
+.annual-max__value > div {
+  height: 21.4285714286rem;
+}
+
+@media (min-width: 48em) {
   .block-features__img {
     margin-right: 0.7142857143em;
   }
 }
 
-@media (min-width: 70.8571428571em) {
+@media (min-width: 62em) {
   .menu__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -945,7 +1084,7 @@ html.dark .features {
   }
 
   .menu__list > li {
-    padding: 0.7142857143em 0;
+    padding: 0.7142857143rem 0;
   }
 
   .login-list {
@@ -994,6 +1133,18 @@ html.dark .features {
   .features > :not(:last-child) {
     padding-right: calc(25px + 20 * ((100vw - 320px) / 880));
   }
+
+  .why__container {
+    padding-right: calc(15px + 45 * ((100vw - 320px) / 880));
+  }
+
+  .why__container {
+    padding-left: calc(15px + 45 * ((100vw - 320px) / 880));
+  }
+
+  .stats__content {
+    margin-bottom: calc(15px + 30 * ((100vw - 320px) / 880));
+  }
 }
 
 @media (max-width: 70.7857142857em) {
@@ -1003,7 +1154,9 @@ html.dark .features {
         -ms-transform: translate(50%, 0);
             transform: translate(50%, 0);
   }
+}
 
+@media (max-width: 61.9375em) {
   .menu {
     margin-right: 0;
   }
@@ -1162,15 +1315,43 @@ html.dark .features {
     padding: 1.0714285714em;
     font-size: 1.2857142857em;
   }
+
+  .why__body {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+        grid-template-areas: "." ".";
+  }
+
+  .why__content {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+
+  .stats__body {
+    margin: 0 auto;
+  }
 }
 
-@media (max-width: 70.7857142857em) and (max-width: 1200px) {
+@media (max-width: 61.9375em) and (max-width: 1200px) {
   .login-list {
     width: calc(300px + 468 * ((100vw - 320px) / 880));
   }
 }
 
-@media (max-width: 54.7857142857em) {
+@media (max-width: 47.9375em) {
   .hero {
     background-position: 40%, 50%;
   }
@@ -1194,7 +1375,7 @@ html.dark .features {
   }
 }
 
-@media (max-width: 41.0714285714em) {
+@media (max-width: 35.9375em) {
   .no-webp .hero {
     background: -o-linear-gradient(315deg, rgb(255, 255, 255) -75%, rgba(255, 255, 255, 0.5) 35%, rgba(255, 255, 255, 0) 80%) 80%, url(../img/hero-bg.jpg) 60% 50%/cover no-repeat;
     background: linear-gradient(135deg, rgb(255, 255, 255) -75%, rgba(255, 255, 255, 0.5) 35%, rgba(255, 255, 255, 0) 80%) 80%, url(../img/hero-bg.jpg) 60% 50%/cover no-repeat; }
@@ -1205,13 +1386,41 @@ html.dark .features {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+
+  .stats__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+
+  .stats__desc {
+    text-align: center;
+  }
+
+  .stats-pointer,
+  .stats-pointer__column {
+    display: none;
+  }
+
+  .stats-pointer__column {
+    display: block;
+  }
+
+  .stats__number {
+    margin-right: -10%;
+  }
 }
 
 .webp .hero { background: url(../img/hero-bg.webp) 50% 50%/cover no-repeat; }
 
 html.webp.dark .hero { background: -webkit-gradient(linear, left top, right top, color-stop(-75%, rgb(0, 0, 0)), color-stop(35%, rgba(0, 0, 0, 0.5)), color-stop(80%, rgba(0, 0, 0, 0.3))), url(../img/hero-bg.webp) 50% 50%/cover no-repeat; background: -o-linear-gradient(left, rgb(0, 0, 0) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0.3) 80%), url(../img/hero-bg.webp) 50% 50%/cover no-repeat; background: linear-gradient(90deg, rgb(0, 0, 0) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0.3) 80%), url(../img/hero-bg.webp) 50% 50%/cover no-repeat; }
 
-@media (max-width: 41.0714285714em) {
+@media (max-width: 35.9375em) {
 
   .webp .hero { background: -o-linear-gradient(315deg, rgb(255, 255, 255) -75%, rgba(255, 255, 255, 0.5) 35%, rgba(255, 255, 255, 0) 80%) 80%, url(../img/hero-bg.webp) 60% 50%/cover no-repeat; background: linear-gradient(135deg, rgb(255, 255, 255) -75%, rgba(255, 255, 255, 0.5) 35%, rgba(255, 255, 255, 0) 80%) 80%, url(../img/hero-bg.webp) 60% 50%/cover no-repeat; }
 }
