fix animation + plan section

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -65,6 +65,10 @@ main {
 	@include adaptiv-value("margin-top", 90, 60, 0);
 }
 
+section {
+	padding: rem(60px) 0;
+}
+
 %underline {
 	&::after {
 		transition: width 0.3s ease 0s;
@@ -105,6 +109,24 @@ main {
 .title {
 	font-family: "Roboto", sans-serif;
 	font-weight: 700;
-	font-size: rem(36px);
+	// font-size: rem(36px);
+	@include adaptiv-value("font-size", 36, 28, 0);
 	line-height: 1.28em;
+}
+
+.subtitle {
+	font-size: rem(13px);
+	font-weight: 700;
+	line-height: 1.54em;
+	letter-spacing: em(0.05px, 13px, 1000);
+	text-transform: uppercase;
+	margin-bottom: rem(20px);
+	color: var(--accent-color);
+}
+
+.text {
+	// font-size: rem(18px);
+	@include adaptiv-value("font-size", 18, 16, 0);
+	line-height: 1.67em;
+	color: var(--gray-color);
 }
