--- a/scss/vars-colors.scss
+++ b/scss/vars-colors.scss
@@ -10,14 +10,16 @@ html {
 		--light-color: #e3eeed;
 		--gray-color: #757575;
 		--orange-color: #f0a446;
+		--accent-blue: #e3eeed;
 	}
 	&.dark {
 		--main-color: #7cdfc3;
 		--icon-color: var(--main-color);
 		--base-color: #2e2d2e;
-		--accent-color: #36cb9a;
+		--accent-color: #3bcfaf;
 		--light-color: #2d312f;
 		--gray-color: #aebfb9;
 		--orange-color: #ffb356;
+		--accent-blue: #414b49;
 	}
 }
